--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-
+    "download": "zx ./script.mjs"
   },
   "keywords": [],
   "author": "",
